--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Social Network</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <button id="install-button" style="display: none;">Install App</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="images/like6.png" type="images" />
+  <link rel="apple-touch-icon" href="images/like1.png">
+  <meta name="theme-color" content="white" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Hello World">
+  <meta name="msapplication-TileImage" content="image/png">
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <title>My Social Network</title>
+</head>
 
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+<body>
+  <div id="root"></div>
+  <button id="install-button" style="display: none;">Install App</button>
 
-  </body>
+  <script type="module" src="/src/main.jsx"></script>
+  <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+</body>
+
 </html>
