--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="/manifest.json">
-  <link rel="icon" href="images/like6.png" type="images" />
-  <link rel="apple-touch-icon" href="images/like1.png">
+  <link rel="manifest" href="/src/public/manifest.json">
+  <link rel="icon" href="/src/assets/images/like6.png" type="images" />
+  <link rel="apple-touch-icon" href="/src/assets/images/like1.png">
   <meta name="theme-color" content="white" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
