--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="/src/public/manifest.json">
-  <link rel="icon" href="/src/assets/images/like6.png" type="images" />
-  <link rel="apple-touch-icon" href="/src/assets/images/like1.png">
-  <meta name="theme-color" content="white" />
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="/images/like6.png" type="images/png" />
+  <link rel="apple-touch-icon" href="/images/like1.png">
+  <meta name="theme-color" content="#ffffff" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="image/png">
+  <meta name="apple-mobile-web-app-title" content="MySocialNetwork">
+  <meta name="msapplication-TileImage" href="/images/like1.png" content="image/png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <title>My Social Network</title>
 </head>
