--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="root"></div>
-  <button id="install-button" style="display: none;">Install App</button>
+  <button id="install-button" style="display: none;">Installer l'application</button>
 
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
