--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/images/like6.png" type="images/png" />
   <link rel="apple-touch-icon" href="/images/like1.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <meta name="theme-color" content="#ffffff" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -18,7 +19,7 @@
 
 <body>
   <div id="root"></div>
-  <button id="install-button" style="display: none;">Installer l'application</button>
+  <!-- <button id="install-button" style="display: none;">Installer l'application</button> -->
 
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
